--- a/packages/annotorious-tilted-box/public/index.html
+++ b/packages/annotorious-tilted-box/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Annotorious | Tilted Box</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.css">
-    <!-- script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.js"></script -->
+    <script src="annotorious.min.js"></script>
     <style>
       html, body {
         padding:20px;
@@ -14,10 +14,8 @@
   <body>
     <img id="hallstatt" src="640px-Hallstatt.jpg">
     <script src="annotorious-tilted-box.min.js"></script>
-
-    <!-- script>
+    <script>
       (function() {
-        /*
         var anno = Annotorious.init({
           image: 'hallstatt'
         });
@@ -25,8 +23,7 @@
         Annotorious.TiltedBox(anno);
 
         anno.setDrawingTool('tilted-box');
-        */
       })();
-    </script -->
+    </script>
   </body>
 </html>
