Upgraded to latest Annotorious changes

--- a/packages/annotorious-tilted-box/public/index.html
+++ b/packages/annotorious-tilted-box/public/index.html
@@ -22,7 +22,7 @@
 
         Annotorious.TiltedBox(anno);
 
-        anno.setDrawingTool('tilted-box');
+        anno.setDrawingTool('annotorious-tilted-box');
       })();
     </script>
   </body>
