--- a/packages/annotorious-tilted-box/public/index.html
+++ b/packages/annotorious-tilted-box/public/index.html
@@ -23,6 +23,10 @@
         Annotorious.TiltedBox(anno);
 
         anno.setDrawingTool('annotorious-tilted-box');
+
+        anno.on('createAnnotation', function(a) {
+          console.log(a);
+        });
       })();
     </script>
   </body>
