Basic plugin functionality

--- a/packages/annotorious-shape-labels/public/index.html
+++ b/packages/annotorious-shape-labels/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Shape Labels Plugin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.js"></script>
+    <!-- script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.js"></script -->
+    <script src="annotorious.min.js"></script>
     <script src="annotorious-shape-labels.min.js"></script>
   </head>
   <body>
@@ -13,6 +14,7 @@
       (function() {
         var anno = Annotorious.init({
           image: 'hallstatt',
+          formatter: Annotorious.ShapeLabelsFormatter,
           widgets: [ 
             'TAG'
           ]
