Basic functionality for findContours plugin

--- a/packages/annotorious-find-contours/public/index.html
+++ b/packages/annotorious-find-contours/public/index.html
@@ -4,6 +4,7 @@
     <title>Annotorious | Find Contours</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.js"></script>
+    <script src="opencv.js"></script>
     <style>
       html, body {
         padding:20px;
@@ -12,7 +13,7 @@
     </style>
   </head>
   <body>
-    <img id="hallstatt" src="640px-Hallstatt.jpg">
+    <img id="hallstatt" src="Recahorts_plan_cadastral_1809.png">
     <script src="annotorious-find-contours.min.js"></script>
     <script>
       (function() {
