--- a/packages/annotorious-shape-labels/public/osd.html
+++ b/packages/annotorious-shape-labels/public/osd.html
@@ -4,7 +4,7 @@
     <title>Shape Labels Plugin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@latest/dist/annotorious.min.css">
     <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/openseadragon-annotorious.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.4.1/dist/openseadragon-annotorious.min.js"></script>
     <script src="annotorious-shape-labels.min.js"></script>
     <style>
       #osd {
