--- a/packages/annotorious-tilted-box/public/index.html
+++ b/packages/annotorious-tilted-box/public/index.html
@@ -4,7 +4,7 @@
     <title>Annotorious | Tilted Box</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/annotorious.min.css">
     <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.4/dist/openseadragon-annotorious.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/openseadragon-annotorious.min.js"></script>
     <style>
       #osd {
         width:800px;
