--- a/plugins/storage-legacy-platform/public/index.html
+++ b/plugins/storage-legacy-platform/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Annotorious | Legacy Storage</title>
     <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.0/dist/openseadragon-annotorious.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/annotorious.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.8/dist/openseadragon-annotorious.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.8/dist/annotorious.min.css">
 
     <style>
       html, body, #osd-image {
