Working my way towards an improved polygon selection tool

--- a/plugins/annotorious-improved-polygon/public/index.html
+++ b/plugins/annotorious-improved-polygon/public/index.html
@@ -32,7 +32,7 @@
         
         Annotorious.ImprovedPolygon(anno);
 
-        anno.setDrawingTool('polygon'); 
+        anno.setDrawingTool('im-polygon'); 
         
         anno.on('createAnnotation', function(a) {
           console.log('created', a);
