Finally... basic working project

--- a/plugins/annotorious-improved-polygon/public/index.html
+++ b/plugins/annotorious-improved-polygon/public/index.html
@@ -2,38 +2,33 @@
 <html>
   <head>
     <title>Annotorious | Improved Polygon</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/annotorious.min.css">
-    <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/openseadragon-annotorious.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.5.8/dist/annotorious.min.css">
+    <script src="annotorious.min.js"></script>
     <style>
-      #osd {
-        width:800px;
-        height:600px;
+      #content {
+        width:100%;
+      }
+
+      img {
+        max-width:100%;
       }
     </style>
   </head>
   <body>
-    <div id="osd"></div>
+    <div id="content">  
+      <img id="hallstatt" src="640px-Hallstatt.jpg" />
+    </div>
 
     <script type="text/javascript">
       window.onload = function() {
-        var viewer = OpenSeadragon({
-          id: "osd",
-          prefixUrl: "openseadragon-bin-2.4.2/images/",
-          tileSources: {
-            type: "image",
-            url: "Carta_Marina.jpeg"
-          }
-        });
-
-        var anno = OpenSeadragon.Annotorious(viewer, {
+        var anno = Annotorious.init({
+          image: 'hallstatt',
           allowEmpty: true
         });
-        
-        Annotorious.ImprovedPolygon(anno);
 
+        Annotorious.ImprovedPolygon(anno);
         anno.setDrawingTool('im-polygon'); 
-        
+
         anno.on('createAnnotation', function(a) {
           console.log('created', a);
         });
