Starting to tweak CSS styles

--- a/plugins/annotorious-improved-polygon/public/index.html
+++ b/plugins/annotorious-improved-polygon/public/index.html
@@ -12,6 +12,28 @@
       img {
         max-width:100%;
       }
+
+      #content .a9s-selection-mask {
+        fill:rgba(0, 0, 0, 0.25);
+      }
+
+      #content .a9s-annotation.editable .a9s-inner,
+      #content .a9s-selection .a9s-inner {
+        stroke-width:2px;
+        stroke:#fff;
+      }
+
+      #content .a9s-annotation.editable .a9s-outer,
+      #content .a9s-selection .a9s-outer {
+        stroke-width:4px;
+        stroke:rgba(0, 0, 0, 0.35);
+      }
+
+      #content polygon.a9s-rubberband {
+        fill:none;
+        stroke-width:1px;
+        stroke:rgba(0, 0, 0, 0.3);
+      }
     </style>
   </head>
   <body>
