--- a/plugins/annotorious-improved-polygon/public/index.html
+++ b/plugins/annotorious-improved-polygon/public/index.html
@@ -16,6 +16,10 @@
       #content .a9s-selection-mask {
         fill:rgba(0, 0, 0, 0.25);
       }
+
+      .a9s-annotationlayer.has-crosshair * {
+        cursor:none;
+      }
     </style>
   </head>
   <body>
