Bugfix + upgrade to Annotorious 2.5.9

--- a/plugins/annotorious-improved-polygon/public/index.html
+++ b/plugins/annotorious-improved-polygon/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Annotorious | Improved Polygon</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.5.8/dist/annotorious.min.css">
+    <link rel="stylesheet" href="annotorious.min.css">
     <script src="annotorious.min.js"></script>
     <style>
       #content {
