Draw on single click (Annotorious standard)

--- a/plugins/annotorious-improved-polygon/public/index.html
+++ b/plugins/annotorious-improved-polygon/public/index.html
@@ -31,6 +31,7 @@
       window.onload = function() {
         var anno = Annotorious.init({
           image: 'hallstatt',
+          drawOnSingleClick: true,
           crosshair: true,
           allowEmpty: true
         });
