--- a/plugins/annotorious-improved-polygon/public/osd.html
+++ b/plugins/annotorious-improved-polygon/public/osd.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Annotorious | Improved Polygon</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/annotorious.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/annotorious.min.css">
     <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/openseadragon-annotorious.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/openseadragon-annotorious.min.js"></script>
+    <script src="annotorious-improved-polygon.js"></script>
     <style>
       #osd {
         width:800px;
@@ -27,7 +28,8 @@
         });
 
         var anno = OpenSeadragon.Annotorious(viewer, {
-          allowEmpty: true
+          allowEmpty: true,
+          drawOnSingleClick: true
         });
         
         Annotorious.ImprovedPolygon(anno);
