--- a/plugins/annotorious-better-polygon/public/index.html
+++ b/plugins/annotorious-better-polygon/public/index.html
@@ -36,7 +36,7 @@
           allowEmpty: true
         });
 
-        Annotorious.ImprovedPolygon(anno);
+        Annotorious.BetterPolygon(anno);
         anno.setDrawingTool('polygon'); 
 
         anno.on('createAnnotation', function(a) {
