--- a/plugins/annotorious-better-polygon/public/osd.html
+++ b/plugins/annotorious-better-polygon/public/osd.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/annotorious.min.css">
     <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/openseadragon-annotorious.min.js"></script>
-    <script src="annotorious-improved-polygon.js"></script>
+    <script src="annotorious-better-polygon.js"></script>
     <style>
       #osd {
         width:800px;
@@ -32,7 +32,7 @@
           drawOnSingleClick: true
         });
         
-        Annotorious.ImprovedPolygon(anno);
+        Annotorious.BetterPolygon(anno);
 
         anno.setDrawingTool('polygon'); 
         
