Added updateState implementation

--- a/plugins/annotorious-better-polygon/public/osd.html
+++ b/plugins/annotorious-better-polygon/public/osd.html
@@ -29,6 +29,7 @@
 
         var anno = OpenSeadragon.Annotorious(viewer, {
           allowEmpty: true,
+          gigapixelMode: true,
           drawOnSingleClick: true
         });
         
