Basic build setup

--- a/plugins/widget-better-tag/public/index.html
+++ b/plugins/widget-better-tag/public/index.html
@@ -27,7 +27,11 @@
       window.onload = function() {
         var anno = Annotorious.init({
           image: 'hallstatt',
-          allowEmpty: true
+          allowEmpty: true,
+          widgets: [
+            'COMMENT',
+            recogito.BetterTag()
+          ]
         });
 
         anno.on('createAnnotation', function(a) {
