All basic tagging functionality now re-implemented without downshift

--- a/plugins/widget-better-tag/public/index.html
+++ b/plugins/widget-better-tag/public/index.html
@@ -29,8 +29,7 @@
           image: 'hallstatt',
           allowEmpty: true,
           widgets: [
-            'COMMENT',
-            recogito.BetterTag()
+            { widget: recogito.BetterTag, vocabulary: [ 'Foo', 'Bar', 'Baz'] }
           ]
         });
 
