Added hover tooltip plugin project skeleton

--- a/plugins/annotorious-better-polygon/public/osd.html
+++ b/plugins/annotorious-better-polygon/public/osd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Annotorious | Improved Polygon</title>
+    <title>Annotorious | Better Polygon</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/annotorious.min.css">
     <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/openseadragon-annotorious.min.js"></script>
