--- a/plugins/annotorious-better-polygon/public/index.html
+++ b/plugins/annotorious-better-polygon/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Annotorious | Improved Polygon</title>
+    <title>Annotorious | Better Polygon</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.5.9/dist/annotorious.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.5.9/dist/annotorious.min.js"></script>
     <style>
