--- a/plugins/storage-legacy-platform/public/index.html
+++ b/plugins/storage-legacy-platform/public/index.html
@@ -43,9 +43,9 @@
 
         var config = {
           documentId: 'u7iyermrio1tph',
-          partSequenceNumber: 1,
+          partSequenceNo: 1,
           contentType: 'IMAGE_UPLOAD',
-          filepartId: 'b7e08a88-6645-42c7-addf-81f81fea1f1b'
+          partId: 'b7e08a88-6645-42c7-addf-81f81fea1f1b'
         };
 
         recogito.LegacyStorage(anno, config);
