Upgraded test file to OSD 3

--- a/plugins/annotorious-map-annotation/public/index.html
+++ b/plugins/annotorious-map-annotation/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Annotorious Map Annotation</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/annotorious.min.css">
-    <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
+    <script src="openseadragon-3/openseadragon.3.0.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/openseadragon-wmts@0.3.1/dist/openseadragon-wmts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/openseadragon-annotorious.min.js"></script>
     <script>
