--- a/plugins/annotorious-shape-labels/public/index.html
+++ b/plugins/annotorious-shape-labels/public/index.html
@@ -3,13 +3,45 @@
   <head>
     <title>Shape Labels Plugin</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.6.1/dist/annotorious.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.6.1/dist/annotorious.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious@2.7.2/dist/annotorious.min.js"></script>
     <script src="annotorious-shape-labels.min.js"></script>
+    <style>
+      .container {
+        position:relative;
+        max-width:100%;
+        width: 420px;
+      }
+
+      img {
+        width:100%;
+      }
+    </style>
   </head>
   <body>
-    <img id="hallstatt" src="640px-Hallstatt.jpg" />
+    <div class="container">
+      <img id="hallstatt" src="640px-Hallstatt.jpg" />
+    </div>
 
     <script type="text/javascript">
+      var fixture = {
+        "@context":"http://www.w3.org/ns/anno.jsonld",
+        "type":"Annotation",
+        "id":"#07140773-aae9-4db7-896e-82232dad4574",
+        "body":[{
+          "type":"TextualBody",
+          "value":"Tag",
+          "purpose":"tagging"
+        }],
+        "target":{
+          "source":"http://localhost:3000/640px-Hallstatt.jpg",
+          "selector":{
+            "type":"FragmentSelector",
+            "conformsTo":"http://www.w3.org/TR/media-frags/",
+            "value":"xywh=pixel:260.5714416503906,156.95237731933594,152.38095092773438,121.90476989746094"
+          }
+        }
+      };
+
       (function() {
         var anno = Annotorious.init({
           image: 'hallstatt',
@@ -19,6 +51,8 @@
             'TAG'
           ]
         });
+
+        anno.addAnnotation(fixture);
       })();
     </script>
   </body>
