Upgraded better-polygon tests to latest Annotorious + OSD versions

--- a/plugins/annotorious-better-polygon/public/osd.html
+++ b/plugins/annotorious-better-polygon/public/osd.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Annotorious | Better Polygon</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/annotorious.min.css">
-    <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.5.9/dist/openseadragon-annotorious.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.7.6/dist/annotorious.min.css">
+    <script src="openseadragon-bin-3.0.0/openseadragon.3.0.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.7.6/dist/openseadragon-annotorious.min.js"></script>
     <script src="annotorious-better-polygon.js"></script>
     <style>
       #osd {
