Started SnapPolygon plugin by copying better-polygon as a template

--- a/plugins/annotorious-osd-snappable-polygon/public/index.html
+++ b/plugins/annotorious-osd-snappable-polygon/public/index.html
@@ -32,7 +32,7 @@
           crosshair: true
         });
         
-        Annotorious.OsdSnap(anno);
+        Annotorious.SnapPolygon(anno);
 
         anno.setDrawingTool('polygon'); 
       }
