Added AnnotoriousOSD latest dev build

--- a/plugins/annotorious-osd-snappable-polygon/public/index.html
+++ b/plugins/annotorious-osd-snappable-polygon/public/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>AnnotoriousOSD | Snap</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.7.9/dist/annotorious.min.css">
+    <link rel="stylesheet" href="dev/annotorious.min.css">
     <script src="openseadragon-bin-3.0.0/openseadragon.3.0.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@2.7.9/dist/openseadragon-annotorious.min.js"></script>
+    <script src="dev/openseadragon-annotorious.min.js"></script>
     <style>
       #osd {
         width:800px;
