First proof of concept

--- a/plugins/annotorious-osd-snappable-polygon/public/index.html
+++ b/plugins/annotorious-osd-snappable-polygon/public/index.html
@@ -35,7 +35,7 @@
         
         Annotorious.SnapPolygon(anno);
 
-        // anno.setDrawingTool('polygon');
+        anno.setDrawingTool('polygon');
 
         anno.on('createAnnotation', function(a) {
           console.log(JSON.stringify(a));
