tooltip feature to display name of the button on hover

--- a/plugins/annotorious-toolbar/public/index.html
+++ b/plugins/annotorious-toolbar/public/index.html
@@ -35,7 +35,7 @@
 
         // Initialize Annotorious
         var anno = OpenSeadragon.Annotorious(viewer);
-        Annotorious.Toolbar(anno, document.getElementById('toolbar-container'), { withMouse: true });
+        Annotorious.Toolbar(anno, document.getElementById('toolbar-container'), { withMouse: true,withTooltip:false });
       }
     </script>
   </body>
